.......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
.......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
A......... [ZBX-6078] fixed graph item creating (Eduards)
A......... [ZBX-6050] fixed duplicate step name validation in httptest.create and httptest.update (Pavels)
A......... [ZBX-5846] removed the graphitem.getobjects method (Pavels)
A......... [ZBX-5706] fixed trigger.adddependencies returning an object instead of an array of trigger IDs (Pavels)
A......... [ZBX-5916] removed the unnecessary dhostids parameter from dcheck.get (Pavels)
A......... [ZBX-5719] fixed event.get returning only trigger events by default for admin users (Pavels)
A......... [ZBX-5915] fixed the host.get and template.get selectParentTemplates parameter using an incorrect property name when passing count (Pavels)
..F....... [ZBX-6049] fixed "Undefined index" in Web scenario steps (Oleg)
A......... [ZBXNEXT-1491] fixed alert.get hostids and groupids parameters (Pavels)
A......... [ZBXNEXT-1491] fixed multiple subselects returning hashes instead of arrays (Pavels)
A......... [ZBXNEXT-1491] fixed item.get selectHosts returning double template objects (Pavels)
A......... [ZBXNEXT-1491] fixed itemprototype.get selectItems not returning web items (Pavels)
A......... [ZBXNEXT-1491] fixed template.get selectTemplates and selectHosts not working with count (Pavels)
A......... [ZBXNEXT-1491] fixed script.get subselects not working when not requesting the groupid and host_access properties (Pavels)
..F....... [ZBX-5944] fixed expression calculation displaing (Eduard)
.......P.. [ZBX-5909] fixed proxy compilation when using '--with-sqlite3' (Andris)
..F....... [ZBX-5904] fixed history filter by items (Eduard)